--- a/src/components/Banner/style.module.scss
+++ b/src/components/Banner/style.module.scss
@@ -52,6 +52,18 @@
     order: 1;
   }
 
+  &.animate img {
+    opacity: 0;
+  }
+
+  &.show img {
+    -webkit-animation-delay: .3s;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
+    animation-name: fadeIn;
+    transition-delay: .3s;
+  }
+
   img {
     border-radius: 1rem;
     width: 140px;
@@ -74,6 +86,17 @@
     flex-basis: 50%;
     padding: 4rem 1rem;
     text-align: left;
+  }
+
+  &.animate {
+    opacity: 0;
+    transform: translateY(50px);
+    transition: .3s ease-out;
+  }
+
+  &.show {
+    opacity: 1;
+    transform: translateY(0);
   }
 
   h1 {
@@ -128,5 +151,17 @@
 
   @media (min-width: $breakpoint-md) {
     justify-content: flex-start;
+  }
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+    transform: scale(.95)
+  }
+
+  to {
+    opacity: 1;
+    transform: scale(1)
   }
 }
