--- a/src/components/Animated/style.module.scss
+++ b/src/components/Animated/style.module.scss
@@ -1,10 +1,10 @@
 .section {
   opacity: 0;
-  // transform: translateY(100px);
+  transform: translateY(100px);
 }
 
 .loading {
   opacity: 1;
-  // transform: translateY(0);
+  transform: translateY(0);
   transition: opacity 0.6s ease, transform 0.6s ease;
 }
