--- a/src/components/Header/style.module.scss
+++ b/src/components/Header/style.module.scss
@@ -1,25 +1,26 @@
-@import '@/styles/variables.scss';
+@use '@/styles/variables' as vars;
+@use '@/styles/mixins' as mixins;
 
 .header {
   position: relative;
-  background: $color-header;
+  background: vars.$color-header;
   margin-bottom: -78px;
   z-index: 10;
 
-  @include dark-mode {
-    background: $color-header-dark;
+  @include mixins.dark-mode {
+    background: vars.$color-header-dark;
   }
 
-  @media (min-width: $breakpoint-md) {
+  @media (min-width: vars.$breakpoint-md) {
     position: sticky;
     top: 0;
   }
 
   &.scrolled {
-    border-bottom: 1px solid $color-border;
+    border-bottom: 1px solid vars.$color-border;
 
-    @include dark-mode {
-      border-color: $color-border-dark;
+    @include mixins.dark-mode {
+      border-color: vars.$color-border-dark;
     }
   }
 
@@ -29,23 +30,23 @@
 }
 
 .container {
-  @include container;
+  @include mixins.container;
 }
 
 .navigation {
   display: none;
   align-items: center;
-  background: $color-nav;
+  background: vars.$color-nav;
   border-radius: 23px;
   margin-top: 1rem;
   margin-bottom: 1rem;
   margin-right: auto;
 
-  @include dark-mode {
-    background: $color-nav-dark;
+  @include mixins.dark-mode {
+    background: vars.$color-nav-dark;
   }
 
-  @media (min-width: $breakpoint-md) {
+  @media (min-width: vars.$breakpoint-md) {
     display: flex;
   }
 
@@ -53,42 +54,42 @@
     display: flex;
     align-items: center;
     border-radius: 23px;
-    color: $color-nav-text;
+    color: vars.$color-nav-text;
     height: 46px;
     line-height: 1.25rem;
     padding: 0.75rem 1rem;
     margin: 0 0.25rem;
     transition: all 0.3s;
 
-    @include dark-mode {
-      color: $color-nav-text-dark;
+    @include mixins.dark-mode {
+      color: vars.$color-nav-text-dark;
     }
 
-    @media (min-width: $breakpoint-lg) {
+    @media (min-width: vars.$breakpoint-lg) {
       padding-left: 1.5rem;
       padding-right: 1.5rem;
     }
 
     &:hover {
-      background: $color-nav-hover;
-      color: $color-nav-hover-text;
+      background: vars.$color-nav-hover;
+      color: vars.$color-nav-hover-text;
 
-      @include dark-mode {
-        background: $color-nav-hover-dark;
-        color: $color-nav-hover-text-dark;
+      @include mixins.dark-mode {
+        background: vars.$color-nav-hover-dark;
+        color: vars.$color-nav-hover-text-dark;
       }
     }
 
     &:nth-child(1) {
       margin-left: 0;
 
-      @media (max-width: $breakpoint-lg - 1) {
+      @media (max-width: vars.$breakpoint-lg - 1) {
         display: none;
       }
     }
 
     &:nth-child(2) {
-      @media (max-width: $breakpoint-lg - 1) {
+      @media (max-width: vars.$breakpoint-lg - 1) {
         margin-left: 0;
       }
     }
