--- a/src/components/Banner/style.module.scss
+++ b/src/components/Banner/style.module.scss
@@ -1,10 +1,11 @@
-@import '@/styles/variables.scss';
+@use '@/styles/variables' as vars;
+@use '@/styles/mixins' as mixins;
 
 .banner {
   position: relative;
 
   &:before {
-    @media (max-width: $breakpoint-md - 1) {
+    @media (max-width: vars.$breakpoint-md - 1) {
       content: "";
       display: block;
       padding-bottom: 156.25%;
@@ -13,7 +14,7 @@
 }
 
 .container {
-  @include container;
+  @include mixins.container;
   padding: 0;
 }
 
@@ -25,13 +26,13 @@
   flex-direction: column;
   padding-top: 78px;
 
-  @media (min-width: $breakpoint-md) {
+  @media (min-width: vars.$breakpoint-md) {
     justify-content: flex-start;
     flex-direction: row;
     height: 800px;
   }
 
-  @media (max-width: $breakpoint-md - 1) {
+  @media (max-width: vars.$breakpoint-md - 1) {
     height: 100%;
     width: 100%;
     position: absolute;
@@ -44,7 +45,7 @@
   display: flex;
   padding: 0 1rem;
 
-  @media (min-width: $breakpoint-md) {
+  @media (min-width: vars.$breakpoint-md) {
     flex-basis: 50%;
     justify-content: flex-end;
     padding-left: 2rem;
@@ -65,7 +66,7 @@
   .imageWrap {
     width: 140px;
 
-    @media (min-width: $breakpoint-md) {
+    @media (min-width: vars.$breakpoint-md) {
       width: 500px;
     }
   }
@@ -82,7 +83,7 @@
   padding: 1rem 1rem 0;
   text-align: center;
 
-  @media (min-width: $breakpoint-md) {
+  @media (min-width: vars.$breakpoint-md) {
     flex-basis: 50%;
     padding: 4rem 1rem;
     text-align: left;
@@ -100,46 +101,45 @@
   }
 
   h1 {
-    font-family: $font-heading;
+    font-family: vars.$font-heading;
     font-size: 2rem;
     font-weight: bold;
-    color: $color-heading;
+    color: vars.$color-heading;
 
-    @include dark-mode {
-      color: $color-heading-dark;
+    @include mixins.dark-mode {
+      color: vars.$color-heading-dark;
     }
-  
-    @media (min-width: $breakpoint-md) and (max-width: $breakpoint-lg - 1) {
+
+    @media (min-width: vars.$breakpoint-md) and (max-width: vars.$breakpoint-lg - 1) {
       font-size: 2rem;
     }
-  
-    @media (min-width: $breakpoint-lg) {
+
+    @media (min-width: vars.$breakpoint-lg) {
       font-size: 3rem;
     }
-  
+
     span {
       display: block;
       font-size: 1.5rem;
-      color: $color-primary;
+      color: vars.$color-primary;
       margin-bottom: 0.5rem;
-  
-      @media (min-width: $breakpoint-lg) {
+
+      @media (min-width: vars.$breakpoint-lg) {
         font-size: 2.5rem;
       }
     }
   }
-  
+
   h2 {
-    font-family: $font-heading;
+    font-family: vars.$font-heading;
     font-size: 1.125rem;
     font-weight: 500;
-  
-    @media (min-width: $breakpoint-md) and (max-width: $breakpoint-lg - 1) {
+
+    @media (min-width: vars.$breakpoint-md) and (max-width: vars.$breakpoint-lg - 1) {
       font-size: 1.375rem;
-  
     }
-  
-    @media (min-width: $breakpoint-lg) {
+
+    @media (min-width: vars.$breakpoint-lg) {
       font-size: 1.625rem;
     }
   }
@@ -149,7 +149,7 @@
   justify-content: center;
   margin-top: 1rem;
 
-  @media (min-width: $breakpoint-md) {
+  @media (min-width: vars.$breakpoint-md) {
     justify-content: flex-start;
   }
 }
