--- a/src/components/Section/style.module.scss
+++ b/src/components/Section/style.module.scss
@@ -1,29 +1,30 @@
-@import '@/styles/variables.scss';
+@use '@/styles/variables' as vars;
+@use '@/styles/mixins' as mixins;
 
 .section {
   display: block;
   text-align: left;
   scroll-margin-top: 110px;
 
-  @media (min-width: $breakpoint-md) {
+  @media (min-width: vars.$breakpoint-md) {
     text-align: left;
   }
 }
 
 .container {
-  @include container;
+  @include mixins.container;
 }
 
 .content {
   display: grid;
   gap: 1.5rem;
 
-  @media (min-width: $breakpoint-md) {
+  @media (min-width: vars.$breakpoint-md) {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
-  @media (min-width: $breakpoint-md) and (max-width: $breakpoint-lg - 1)  {
-    gap: 2rem
+  @media (min-width: vars.$breakpoint-md) and (max-width: vars.$breakpoint-lg - 1)  {
+    gap: 2rem;
   }
 
   @media (min-width: 1024px) {
@@ -32,14 +33,13 @@
 }
 
 .image {
-
   .imageWrap {
     display: flex;
-    justify-content: flex-start;;
+    justify-content: flex-start;
     width: 100%;
     max-width: 240px;
 
-    @media (min-width: $breakpoint-md) {
+    @media (min-width: vars.$breakpoint-md) {
       justify-content: center;
       max-width: 100%;
     }
@@ -56,17 +56,17 @@
   flex-direction: column;
   gap: 0.5rem;
 
-  @media (min-width: $breakpoint-md) {
+  @media (min-width: vars.$breakpoint-md) {
     gap: 1rem;
   }
 
   h2 {
-    font-family: $font-heading;
+    font-family: vars.$font-heading;
     font-size: 1.25rem;
     font-weight: 700;
-    color: $color-primary;
+    color: vars.$color-primary;
 
-    @media (min-width: $breakpoint-md) and (max-width: $breakpoint-lg - 1) {
+    @media (min-width: vars.$breakpoint-md) and (max-width: vars.$breakpoint-lg - 1) {
       font-size: 1.375rem;
     }
 
@@ -76,16 +76,16 @@
   }
 
   h3 {
-    font-family: $font-heading;
+    font-family: vars.$font-heading;
     font-size: 1.75rem;
     font-weight: 700;
-    color: $color-heading;
+    color: vars.$color-heading;
 
-    @include dark-mode {
-      color: $color-heading-dark;
+    @include mixins.dark-mode {
+      color: vars.$color-heading-dark;
     }
 
-    @media (min-width: $breakpoint-md) and (max-width: $breakpoint-lg - 1) {
+    @media (min-width: vars.$breakpoint-md) and (max-width: vars.$breakpoint-lg - 1) {
       font-size: 2rem;
     }
 
@@ -95,7 +95,7 @@
   }
 
   p {
-    @media (min-width: $breakpoint-md) {
+    @media (min-width: vars.$breakpoint-md) {
       font-size: 1.125rem;
     } 
   }
@@ -104,7 +104,7 @@
     justify-content: flex-start;
     margin-top: 0.5rem;
 
-    @media (min-width: $breakpoint-md) {
+    @media (min-width: vars.$breakpoint-md) {
       justify-content: flex-start;
       margin-top: 0;
     }
