--- a/src/components/Stack/style.module.scss
+++ b/src/components/Stack/style.module.scss
@@ -1,4 +1,5 @@
-@import '@/styles/variables.scss';
+@use '@/styles/variables' as vars;
+@use '@/styles/mixins' as mixins;
 
 .stack {
   text-align: center;
@@ -6,7 +7,7 @@
 }
 
 .container {
-  @include container;
+  @include mixins.container;
 }
 
 .content {
@@ -16,20 +17,20 @@
   width: 100%;
 
   h2 {
-    font-family: $font-heading;
+    font-family: vars.$font-heading;
     font-size: 1.75rem;
     font-weight: bold;
-    color: $color-heading;
+    color: vars.$color-heading;
 
-    @include dark-mode {
-      color: $color-heading-dark;
+    @include mixins.dark-mode {
+      color: vars.$color-heading-dark;
     }
 
-    @media (min-width: $breakpoint-md) {
+    @media (min-width: vars.$breakpoint-md) {
       font-size: 2rem;
     }
 
-    @media (min-width: $breakpoint-lg) {
+    @media (min-width: vars.$breakpoint-lg) {
       font-size: 2.5rem;
     }
   }
@@ -41,7 +42,7 @@
   justify-content: center;
   gap: 2rem;
 
-  @media (min-width: $breakpoint-md) {
+  @media (min-width: vars.$breakpoint-md) {
     justify-content: center;
   }
 }
@@ -49,13 +50,13 @@
 .item {
   position: relative;
   width: 40px;
-  color: $color-heading;
+  color: vars.$color-heading;
 
-  @include dark-mode {
-    color: $color-heading-dark;
+  @include mixins.dark-mode {
+    color: vars.$color-heading-dark;
   }
 
-  @media (min-width: $breakpoint-md) {
+  @media (min-width: vars.$breakpoint-md) {
     width: 60px;
   }
 
@@ -77,7 +78,7 @@
     height: 100%;
 
     &[data-tooltip] {
-      @include toolbar;
+      @include mixins.toolbar;
 
       &:hover::after {
         margin-top: 1rem;
