--- a/src/components/Timeline/style.module.scss
+++ b/src/components/Timeline/style.module.scss
@@ -1,11 +1,12 @@
-@import '@/styles/variables.scss';
+@use '@/styles/variables' as vars;
+@use '@/styles/mixins' as mixins;
 
 .timeline {
   scroll-margin-top: 110px;
 }
 
 .container {
-  @include container;
+  @include mixins.container;
 }
 
 .content {
@@ -14,32 +15,32 @@
   flex-wrap: wrap;
   gap: 1.5rem;
 
-  @media (min-width: $breakpoint-md) {
+  @media (min-width: vars.$breakpoint-md) {
     gap: 2rem;
   }
 
-  @media (min-width: $breakpoint-lg) {
+  @media (min-width: vars.$breakpoint-lg) {
     gap: 5rem;
   }
 
   .list {
 
-    @media (min-width: $breakpoint-md) and (max-width: $breakpoint-lg - 1) {
+    @media (min-width: vars.$breakpoint-md) and (max-width: vars.$breakpoint-lg - 1) {
       width: calc(60% - 1rem);
     }
 
-    @media (min-width: $breakpoint-lg) {
+    @media (min-width: vars.$breakpoint-lg) {
       width: calc(60% - 2.5rem);
     }
   }
 
   .text {
 
-    @media (min-width: $breakpoint-md) and (max-width: $breakpoint-lg - 1) {
+    @media (min-width: vars.$breakpoint-md) and (max-width: vars.$breakpoint-lg - 1) {
       width: calc(40% - 1rem);
     }
     
-    @media (min-width: $breakpoint-lg) {
+    @media (min-width: vars.$breakpoint-lg) {
       width: calc(40% - 2.5rem);
     }
   }
@@ -51,7 +52,7 @@
   gap: 1rem;
   order: 1;
 
-  @media (min-width: $breakpoint-md) {
+  @media (min-width: vars.$breakpoint-md) {
     gap: 2rem;
   }
 }
@@ -60,18 +61,18 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  background: $color-block;
-  border: 1px solid $color-border;
+  background: vars.$color-block;
+  border: 1px solid vars.$color-border;
   border-width: 1px 0;
   padding: 1.5rem 1rem;
   margin: 0 -1rem;
   
-  @include dark-mode {
-    background: $color-block-dark;
-    border-color: $color-border-dark;
+  @include mixins.dark-mode {
+    background: vars.$color-block-dark;
+    border-color: vars.$color-border-dark;
   }
 
-  @media (min-width: $breakpoint-md) {
+  @media (min-width: vars.$breakpoint-md) {
     gap: 1rem;
     border-radius: 1rem;
     border-width: 1px;
@@ -80,39 +81,39 @@
   }
 
   h3 {
-    font-family: $font-heading;
+    font-family: vars.$font-heading;
     font-size: 1rem;
     line-height: 1.5rem;
     font-weight: bold;
-    color: $color-primary;
+    color: vars.$color-primary;
     margin-bottom: -0.5rem;
 
-    @media (min-width: $breakpoint-md) and (max-width: $breakpoint-lg - 1){
+    @media (min-width: vars.$breakpoint-md) and (max-width: vars.$breakpoint-lg - 1){
       font-size: 1.375rem;
       line-height: 1.2;
     }
 
-    @media (min-width: $breakpoint-lg) {
+    @media (min-width: vars.$breakpoint-lg) {
       font-size: 1.5rem;
       line-height: 2rem;
     }
   }
 
   h4 {
-    font-family: $font-heading;
+    font-family: vars.$font-heading;
     font-size: 1.375rem;
     font-weight: bold;
-    color: $color-heading;
+    color: vars.$color-heading;
 
-    @include dark-mode {
-      color: $color-heading-dark;
+    @include mixins.dark-mode {
+      color: vars.$color-heading-dark;
     }
 
-    @media (min-width: $breakpoint-md) and (max-width: $breakpoint-lg - 1) {
+    @media (min-width: vars.$breakpoint-md) and (max-width: vars.$breakpoint-lg - 1) {
       font-size: 1.5rem;
     }
 
-    @media (min-width: $breakpoint-lg) {
+    @media (min-width: vars.$breakpoint-lg) {
       font-size: 1.75rem;
     }
   }
@@ -124,7 +125,7 @@
   }
 
   p {
-    @media (min-width: $breakpoint-md) {
+    @media (min-width: vars.$breakpoint-md) {
       font-size: 1.125rem;
       line-height: 1.7;
     }
@@ -138,7 +139,7 @@
   gap: 0.5rem;
   text-align: left;
 
-  @media (min-width: $breakpoint-md) {
+  @media (min-width: vars.$breakpoint-md) {
     position: sticky;
     top: 94px;
     text-align: left;
@@ -146,41 +147,41 @@
   }
 
   h2 {
-    font-family: $font-heading;
+    font-family: vars.$font-heading;
     font-size: 1.25rem;
     font-weight: 700;
-    color: $color-primary;
+    color: vars.$color-primary;
 
-    @media (min-width: $breakpoint-md) and (max-width: $breakpoint-lg - 1) {
+    @media (min-width: vars.$breakpoint-md) and (max-width: vars.$breakpoint-lg - 1) {
       font-size: 1.375rem;
     }
 
-    @media (min-width: $breakpoint-lg) {
+    @media (min-width: vars.$breakpoint-lg) {
       font-size: 1.5rem;
     }
   }
 
   h3 {
-    font-family: $font-heading;
+    font-family: vars.$font-heading;
     font-size: 1.75rem;
     font-weight: 700;
-    color: $color-heading;
+    color: vars.$color-heading;
 
-    @include dark-mode {
-      color: $color-heading-dark;
+    @include mixins.dark-mode {
+      color: vars.$color-heading-dark;
     }
 
-    @media (min-width: $breakpoint-md) and (max-width: $breakpoint-lg - 1) {
+    @media (min-width: vars.$breakpoint-md) and (max-width: vars.$breakpoint-lg - 1) {
       font-size: 2rem;
     }
 
-    @media (min-width: $breakpoint-lg) {
+    @media (min-width: vars.$breakpoint-lg) {
       font-size: 2.5rem;
     }
   }
 
   p {
-    @media (min-width: $breakpoint-md) {
+    @media (min-width: vars.$breakpoint-md) {
       font-size: 1.125rem;
     } 
   }
@@ -189,7 +190,7 @@
     justify-content: flex-start;
     margin-top: 0.5rem;
 
-    @media (min-width: $breakpoint-md) {
+    @media (min-width: vars.$breakpoint-md) {
       justify-content: flex-start;
       margin-top: 0;
     }
