--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -1,3 +1,5 @@
+@use '@/styles/variables' as vars;
+
 @mixin dark-mode {
   :global(.dark) & {
     @content;
@@ -8,10 +10,9 @@
   }
 }
 
-
 @mixin container {
   display: flex;
-  max-width: $width-max;
+  max-width: vars.$width-max;
   margin: 0 auto;
   padding: 0 1rem;
 }
@@ -24,8 +25,8 @@
     left: 50%;
     margin-top: -1rem;
     transform: translateX(-50%);
-    background-color: $color-tooltip;
-    color: $color-tooltip-text;
+    background-color: vars.$color-tooltip;
+    color: vars.$color-tooltip-text;
     padding: 0.325rem 1rem;
     border-radius: 0.5rem;
     white-space: nowrap;
@@ -34,13 +35,13 @@
     transition: opacity 0.2s ease, visibility 0.2s ease;
 
     @include dark-mode {
-      background-color: $color-tooltip-dark;
-      color: $color-tooltip-text-dark;
+      background-color: vars.$color-tooltip-dark;
+      color: vars.$color-tooltip-text-dark;
     }
   }
 
   &:hover::before {
-    border-color: transparent transparent $color-tooltip transparent;
+    border-color: transparent transparent vars.$color-tooltip transparent;
     border-style: solid;
     border-width: 0 6px 6px;
     content: "";
@@ -56,7 +57,7 @@
     transition: opacity 0.2s ease, visibility 0.2s ease;
 
     @include dark-mode {
-      border-color: transparent transparent $color-tooltip-dark transparent;
+      border-color: transparent transparent vars.$color-tooltip-dark transparent;
     }
   }
 
@@ -66,7 +67,7 @@
     visibility: hidden;
     display: none;
 
-    @media (min-width: $breakpoint-md) {
+    @media (min-width: vars.$breakpoint-md) {
       display: block;
     }
   }
