--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,5 +1,4 @@
-
-@import './mixins';
+@use 'sass:color';
 
 $font-heading: 'DM Sans', Arial, sans-serif;
 $font-body: Arial, sans-serif;
@@ -11,7 +10,7 @@ $breakpoint-lg: 1024px;
 
 // Primary color scheme
 $color-primary: #dd2121;
-$color-primary-hover: darken($color-primary, 10%);
+$color-primary-hover: color.adjust($color-primary, $lightness: -10%);
 $color-primary-text: #fff;
 
 // Light theme colors
@@ -49,3 +48,7 @@ $color-nav-dark: #202124;
 $color-nav-text-dark: #fff;
 $color-nav-hover-dark: #fff;
 $color-nav-hover-text-dark: #312e2c;
+
+// Add your sun and moon colors here
+$color-sun: #ffd43b;
+$color-moon: #74c0fc;
