--- a/src/components/Banner/style.module.scss
+++ b/src/components/Banner/style.module.scss
@@ -156,6 +156,44 @@
   }
 }
 
+.viewMore {
+  border: 2px solid vars.$color-heading;
+  border-radius: 1rem;
+  bottom: 1rem;
+  height: 3rem;
+  width: 2rem;
+  left: 50%;
+  opacity: 0;
+  position: absolute;
+  transform: translate(-50%);
+  transition: .3s ease-in-out;
+
+  @include mixins.dark-mode {
+    border-color: vars.$color-heading-dark;
+  }
+
+  &:after {
+    background: vars.$color-heading;
+    border-radius: 3px;
+    content: "";
+    height: 9px;
+    left: 50%;
+    position: absolute;
+    top: 12px;
+    transform: translate(-50%);
+    transition: top .3s ease-in-out;
+    width: 4px;
+
+    @include mixins.dark-mode {
+      background: vars.$color-heading-dark;
+    }
+  }
+
+  &.loaded {
+    opacity: 1;
+  }
+}
+
 @keyframes fadeIn {
   0% {
     opacity: 0;
