--- a/src/components/Banner/style.module.scss
+++ b/src/components/Banner/style.module.scss
@@ -104,7 +104,7 @@
 
   h1 {
     font-family: vars.$font-heading;
-    font-size: 2rem;
+    font-size: 1.75rem;
     font-weight: bold;
     color: vars.$color-heading;
 
@@ -112,7 +112,7 @@
       color: vars.$color-heading-dark;
     }
 
-    @media (min-width: vars.$breakpoint-md) and (max-width: vars.$breakpoint-lg - 1) {
+    @media (min-width: vars.$breakpoint-sm) and (max-width: vars.$breakpoint-lg - 1) {
       font-size: 2rem;
     }
 
@@ -157,15 +157,15 @@
 }
 
 .viewMore {
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  transform: translateX(-50%);
   border: 2px solid vars.$color-heading;
   border-radius: 1rem;
-  bottom: 1rem;
   height: 3rem;
   width: 2rem;
-  left: 50%;
   opacity: 0;
-  position: absolute;
-  transform: translate(-50%);
   transition: .3s ease-in-out;
 
   @include mixins.dark-mode {
@@ -183,6 +183,10 @@
     transform: translate(-50%);
     transition: top .3s ease-in-out;
     width: 4px;
+    animation-duration: 3s;
+    animation-fill-mode: forwards;
+    animation-iteration-count: infinite;
+    animation-name: slideDown;
 
     @include mixins.dark-mode {
       background: vars.$color-heading-dark;
@@ -203,5 +207,27 @@
   to {
     opacity: 1;
     transform: scale(1)
+  }
+}
+
+@keyframes slideDown {
+  30% {
+    top: 12px;
+  }
+
+  60% {
+    top: 20px;
+  }
+
+  65% {
+    top: 18px;
+  }
+
+  70% {
+    top: 20px;
+  }
+
+  100% {
+    top: 12px;
   }
 }
