--- a/src/components/Banner/style.module.scss
+++ b/src/components/Banner/style.module.scss
@@ -49,10 +49,14 @@
     }
   }
 
+  &.transition {
+
+  }
+
   &.show {
 
     .social {
-      animation-duration: 0.3s;
+      animation-duration: 0.6s;
       animation-delay: 0.6s;
       animation-fill-mode: forwards;
       animation-name: fadeIn;
@@ -107,13 +111,16 @@
 
   &.animate {
     opacity: 0;
-    transform: translateY(50px);
+    transform: translateY(100px);
+  }
+
+  &.transition {
+    transition: .6s ease-out;
   }
 
   &.show {
     opacity: 1;
     transform: translateY(0);
-    transition: .3s ease-out;
   }
 
   h1 {
@@ -179,8 +186,6 @@
   border-radius: 1rem;
   height: 3rem;
   width: 2rem;
-  opacity: 0;
-  transition: .3s ease-in-out;
 
   @include mixins.dark-mode {
     border-color: vars.$color-heading-dark;
@@ -207,7 +212,15 @@
     }
   }
 
-  &.loaded {
+  &.animate {
+    opacity: 0;
+  }
+
+  &.transition {
+    transition: .6s ease-in-out;
+  }
+
+  &.show {
     opacity: 1;
   }
 }
