--- a/src/components/Footer/style.module.scss
+++ b/src/components/Footer/style.module.scss
@@ -7,10 +7,13 @@
   &.animate {
     opacity: 0;
   }
+  
+  &.transition {
+    transition: opacity 0.6s ease;
+  }
 
   &.show {
     opacity: 1;
-    transition: opacity 0.6s ease;
   }
 
   .logo {
