--- a/src/components/Section/style.module.scss
+++ b/src/components/Section/style.module.scss
@@ -42,16 +42,25 @@
     }
   }
 
-  &.show img {
-    opacity: 1;
-
+  &.transition img {
+    
     @media (max-width: vars.$breakpoint-md - 1) {
-      transform: translateY(0);
       transition: opacity 0.6s ease, transform 0.6s ease;
     }
 
     @media (min-width: vars.$breakpoint-md) {
       animation-duration: 1s;
+    }
+  }
+
+  &.show img {
+    opacity: 1;
+
+    @media (max-width: vars.$breakpoint-md - 1) {
+      transform: translateY(0);
+    }
+
+    @media (min-width: vars.$breakpoint-md) {
       animation-fill-mode: forwards;
       animation-name: slideRight;
     }
@@ -96,10 +105,8 @@
     }
   }
 
-  &.show {
-    opacity: 1;
-    transform: translateY(0);
-
+  &.transition {
+    
     @media (max-width: vars.$breakpoint-md - 1) {
       transition: opacity 0.6s ease, transform 0.6s ease;
     }
@@ -107,6 +114,11 @@
     @media (min-width: vars.$breakpoint-md) {
       transition: .3s ease-out;
     }
+  }
+
+  &.show {
+    opacity: 1;
+    transform: translateY(0);
   }
 
   h2 {
