--- a/src/components/Timeline/style.module.scss
+++ b/src/components/Timeline/style.module.scss
@@ -146,6 +146,20 @@
     gap: 1rem;
   }
 
+  &.animate {
+    opacity: 0;
+    transform: translateY(100px);
+  }
+
+  &.transition {
+    transition: opacity 0.6s ease, transform 0.6s ease;
+  }
+
+  &.show {
+    opacity: 1;
+    transform: translateY(0);
+  }
+
   h2 {
     font-family: vars.$font-heading;
     font-size: 1.25rem;
