--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -38,14 +38,14 @@ $color-block-dark: #1a1a1a;
 $color-tooltip-dark: #fff;
 $color-tooltip-text-dark: #000;
 
-$color-header: #fff;
-$color-nav: rgba(0,0,0,.05);
+$color-header: $color-block;
+$color-nav: #ededed;
 $color-nav-text: inherit;
 $color-nav-hover: rgba(0,0,0,.1);
 $color-nav-hover-text: inherit;
 
 $color-header-dark: #0d0d0d;
-$color-nav-dark: #202124;
+$color-nav-dark: $color-block-dark;
 $color-nav-text-dark: #fff;
 $color-nav-hover-dark: #fff;
 $color-nav-hover-text-dark: #312e2c;
