--- a/src/components/Timeline/style.module.scss
+++ b/src/components/Timeline/style.module.scss
@@ -62,7 +62,7 @@
   flex-direction: column;
   gap: 1rem;
   background: vars.$color-block;
-  border: 1px solid vars.$color-border;
+  border: 1px solid transparent;
   border-width: 1px 0;
   padding: 1.5rem 1rem;
   margin: 0 -1rem;
