--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -44,8 +44,8 @@ $color-block-dark: #1a1a1a;
 $color-tooltip-dark: #fff;
 $color-tooltip-text-dark: #000;
 
-$color-header: $color-block;
-$color-nav: #ededed;
+$color-header: $color-primary;
+$color-nav: #FFF;
 $color-nav-text: inherit;
 $color-nav-hover: #d9d9d9;
 $color-nav-hover-text: inherit;
