--- a/src/components/Social/style.module.scss
+++ b/src/components/Social/style.module.scss
@@ -34,14 +34,14 @@
       }
     }
 
-    &.default {
-      :global(#banner) & {
-        @include mixins.light-mode {
-          background: #FFF;
-          color: vars.$color-primary;
-        }
-      }
-    }
+    // &.default {
+    //   :global(#banner) & {
+    //     @include mixins.light-mode {
+    //       background: #FFF;
+    //       color: vars.$color-primary;
+    //     }
+    //   }
+    // }
   }
 
   svg {
