--- a/src/components/Button/style.module.scss
+++ b/src/components/Button/style.module.scss
@@ -43,12 +43,12 @@
     background: vars.$color-primary-hover;
   }
 
-  :global(#banner) & {
-    @include mixins.light-mode {
-      background: #FFF;
-      color: vars.$color-primary;
-    }
-  }
+  // :global(#banner) & {
+  //   @include mixins.light-mode {
+  //     background: #FFF;
+  //     color: vars.$color-primary;
+  //   }
+  // }
 }
 
 .link {
