--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -44,7 +44,7 @@ $color-block-dark: #1a1a1a;
 $color-tooltip-dark: #fff;
 $color-tooltip-text-dark: #000;
 
-$color-header: $color-primary;
+$color-header: $color-info;
 $color-nav: #FFF;
 $color-nav-text: inherit;
 $color-nav-hover: #d9d9d9;
