--- a/src/components/Logo/style.module.scss
+++ b/src/components/Logo/style.module.scss
@@ -15,8 +15,8 @@
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    background: #FFF;
-    color: vars.$color-primary;
+    background: vars.$color-primary;
+    color: #FFF;
     font-size: 1.625rem;
     width: 2.5rem;
     height: 2.5rem;
