--- a/src/components/Banner/style.module.scss
+++ b/src/components/Banner/style.module.scss
@@ -83,10 +83,10 @@
 
   .imageWrap {
     position: relative;
-    width: 100%;
-    max-width: 140px;
+    width: 140px;
 
     @media (min-width: vars.$breakpoint-md) {
+      width: auto;
       max-width: 500px;
     }
   }
@@ -213,6 +213,12 @@
     border-color: vars.$color-heading-dark;
   }
 
+  @media (max-width: vars.$breakpoint-sm) {
+    border-radius: 12px;
+    height: 36px;
+    width: 24px;
+  }
+
   &:after {
     background: #FFF;
     border-radius: 3px;
@@ -230,6 +236,13 @@
 
     @include mixins.dark-mode {
       background: vars.$color-heading-dark;
+    }
+
+    @media (max-width: vars.$breakpoint-sm) {
+      border-radius: 1.5px;
+      top: 8px;
+      height: 6px;
+      width: 3px;
     }
   }
 
