--- a/src/components/Banner/style.module.scss
+++ b/src/components/Banner/style.module.scss
@@ -86,7 +86,7 @@
     width: 140px;
 
     @media (min-width: vars.$breakpoint-md) {
-      width: auto;
+      width: 100%;
       max-width: 500px;
     }
   }
