--- a/src/components/Header/style.module.scss
+++ b/src/components/Header/style.module.scss
@@ -2,14 +2,10 @@
 @use '@/styles/mixins' as mixins;
 
 .header {
-  position: relative;
+  position: sticky;
+  top: 0;
   margin-bottom: -78px;
   z-index: 10;
-
-  @media (min-width: vars.$breakpoint-md) {
-    position: sticky;
-    top: 0;
-  }
 
   &.scrolled {
     background: vars.$color-header;
@@ -18,6 +14,10 @@
     @include mixins.dark-mode {
       background: vars.$color-header-dark;
       border-color: vars.$color-border-dark;
+    }
+
+    .particles {
+      opacity: 1;
     }
   }
 
@@ -31,6 +31,7 @@
 }
 
 .navigation {
+  position: relative;
   display: none;
   align-items: center;
   background: vars.$color-nav;
@@ -95,4 +96,9 @@
       margin-right: 0;
     }
   }
+}
+
+.particles {
+  opacity: 0;
+  transition: all 0.3s;
 }
