--- a/src/components/Header/style.module.scss
+++ b/src/components/Header/style.module.scss
@@ -22,6 +22,7 @@
   }
 
   .logo {
+    position: relative;
     margin: 1.1875rem auto 1.1875rem 0;
   }
 }
@@ -68,13 +69,15 @@
       padding-right: 1.5rem;
     }
 
-    &:hover {
-      background: vars.$color-nav-hover;
-      color: vars.$color-nav-hover-text;
+    @media (hover: hover) {
+      &:hover {
+        background: vars.$color-nav-hover;
+        color: vars.$color-nav-hover-text;
 
-      @include mixins.dark-mode {
-        background: vars.$color-nav-hover-dark;
-        color: vars.$color-nav-hover-text-dark;
+        @include mixins.dark-mode {
+          background: vars.$color-nav-hover-dark;
+          color: vars.$color-nav-hover-text-dark;
+        }
       }
     }
 
