--- a/src/components/Button/style.module.scss
+++ b/src/components/Button/style.module.scss
@@ -20,8 +20,10 @@
   transition: all .3s ease;
   white-space: nowrap;
 
-  &:hover {
-    transform: scale(1.05);
+  @media (hover: hover) {
+    &:hover {
+      transform: scale(1.05);
+    }
   }
 }
 
@@ -39,16 +41,11 @@
   background: vars.$color-primary;
   color: vars.$color-primary-text;
 
-  &:hover {
-    background: vars.$color-primary-hover;
+  @media (hover: hover) {
+    &:hover {
+      background: vars.$color-primary-hover;
+    }
   }
-
-  // :global(#banner) & {
-  //   @include mixins.light-mode {
-  //     background: #FFF;
-  //     color: vars.$color-primary;
-  //   }
-  // }
 }
 
 .link {
@@ -63,8 +60,10 @@
     padding: 0.75rem 1rem;
   }
 
-  &:hover {
-    text-decoration: underline;
+  @media (hover: hover) {
+    &:hover {
+      text-decoration: underline;
+    }
   }
 
   :global(#banner) & {
