--- a/src/components/Header/style.module.scss
+++ b/src/components/Header/style.module.scss
@@ -4,8 +4,12 @@
 .header {
   position: sticky;
   top: 0;
-  margin-bottom: -78px;
   z-index: 10;
+
+  &.home {
+    margin-bottom: -78px;
+  }
+
 
   &.scrolled {
     background: vars.$color-header;
